# Local-Ecommerce-Backend

./: .gitignore  README.md  alembic.ini  pyproject.toml
src/: config.py  crud.py  database.py  main.py  models.py  schema.py
src/apis/: address.py  auth.py  categories.py  order.py  payment.py  product.py  search.py  seller.py  upload.py
